# antennavis

./: AUTHORS  AntennaWidget.c  ChangeLog  INSTALL  MAINTAINER  Makefile.in  MyTypes.h  ParseArgs.c  ParseArgs.h  README  README.old  TkAnt.1  TkAntenna.c  TkAntenna.h  Togl.html  VisField.c  VisField.h  VisWires.c  VisWires.h  ant.c  ant.h  antenna.tcl  antennavis.1  color.c  configure.ac  makefile  makefile.in  makefile.old  pcard.c  pcard.h  togl.c  togl.h
Models/: 19el_432_tonna.nec  EX1.nec  EX2.nec  EX3.nec  EX4.nec  EX5.nec  EX6.nec  EX7.nec  LICENSE-NEC.FILES  centfeed.nec  quad17m-1.nec  tri_7.nec  yg2_5el_50.nec  yg_16el_220.nec  yg_4el_20.nec
debian/: README.Debian  changelog  control  copyright  docs  menu  rules  watch
